--- a/industrial_robot_pkg_gen/CMakeLists.txt
+++ b/industrial_robot_pkg_gen/CMakeLists.txt
@@ -2,8 +2,10 @@ cmake_minimum_required(VERSION 2.8.3)
 project(industrial_robot_pkg_gen)
 
 find_package(catkin REQUIRED COMPONENTS
-  xacro
+  rospy
 )
+
+catkin_package()
 
 catkin_python_setup()
 
