--- a/industrial_robot_pkg_gen/package.xml
+++ b/industrial_robot_pkg_gen/package.xml
@@ -2,14 +2,19 @@
 <package>
   <name>industrial_robot_pkg_gen</name>
   <version>0.0.0</version>
-  <description>The industrial_robot_pkg_gen package generates robot packages that conform to the ROS-Industrial package specification.  http://wiki.ros.org/Industrial/Tutorials/SuggestedPackageLayoutNewRepositories </description>
+  <description>The industrial_robot_pkg_gen package generates robot support packages that conform to the ROS-Industrial package specification.  http://wiki.ros.org/Industrial/Tutorials/SuggestedPackageLayoutNewRepositories </description>
 
-  <maintainer email="shaun.edwards@gmail.com">ros</maintainer>
+  <maintainer email="shaun.edwards@gmail.com">Shaun Edwards</maintainer>
   <license>Apache 2.0</license>
   <url type="website">http://wiki.ros.org/industrial_robot_pkg_gen</url>
-  <author >Shaun Edwards</author>
   <author email="shaun.edwards@gmail.com">Shaun Edwards</author>
 
   <buildtool_depend>catkin</buildtool_depend>
-
+  
+  <build_depend>python-argparse</build_depend>
+  <build_depend>python-empy</build_depend>
+  
+  <run_depend>python-argparse</run_depend>
+  <run_depend>python-empy</run_depend>
+  
 </package>
