First draft of changes to support REP-I0001
- Add simple messages for DynJointPt, DynJointState, DynRobotStatus
- Add controller_joint_map parameter
- Add new "v2" Industrial Robot Client libs to manage these messages
    * maintain existing "v1" libs for backwards compatability
- Update industrial_robot_sim to handle controller_joint_map

--- a/IRC_v2/industrial_robot_client/CMakeLists.txt
+++ b/IRC_v2/industrial_robot_client/CMakeLists.txt
@@ -12,13 +12,20 @@ find_package(Boost REQUIRED COMPONENTS system thread)
 add_definitions(-DROS=1)           #build using ROS libraries
 add_definitions(-DLINUXSOCKETS=1)  #build using LINUX SOCKETS libraries
 
-set(SRC_FILES src/joint_relay_handler.cpp
-              src/robot_status_relay_handler.cpp
-              src/joint_trajectory_downloader.cpp
-              src/joint_trajectory_streamer.cpp
-              src/joint_trajectory_interface.cpp
-              src/robot_state_interface.cpp
-              src/utils.cpp)
+set(SRC_FILES src/v1/joint_relay_handler.cpp
+              src/v1/robot_status_relay_handler.cpp
+              src/v1/joint_trajectory_downloader.cpp
+              src/v1/joint_trajectory_streamer.cpp
+              src/v1/joint_trajectory_interface.cpp
+              src/v1/robot_state_interface.cpp
+              src/v1/utils.cpp
+
+              src/v2/joint_relay_handler.cpp
+              src/v2/robot_status_relay_handler.cpp
+              src/v2/joint_trajectory_streamer.cpp
+              src/v2/joint_trajectory_interface.cpp
+              src/v2/robot_state_interface.cpp
+              src/v2/utils.cpp)
 
 # NOTE: The libraries generated this package are not included in the catkin_package
 # macro because libraries must be explicitly linked in projects that depend on this
@@ -69,32 +76,25 @@ install(TARGETS ${PROJECT_NAME}_dummy DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATI
 #
 
 add_library(industrial_robot_client ${SRC_FILES})
-target_link_libraries(industrial_robot_client simple_message)
+target_link_libraries(industrial_robot_client industrial_utils simple_message)
 
 add_library(industrial_robot_client_bswap ${SRC_FILES})
-target_link_libraries(industrial_robot_client_bswap simple_message_bswap)
+target_link_libraries(industrial_robot_client_bswap industrial_utils simple_message_bswap)
 
 # The following executables(nodes) are for applications where the robot
 # controller and pc have the same byte order (i.e. byte swapping NOT
 # required)
 
 add_executable(robot_state
-  src/generic_robot_state_node.cpp)
+  src/v2/generic_robot_state_node.cpp)
 target_link_libraries(robot_state 
   industrial_robot_client
   simple_message
   ${catkin_LIBRARIES})
 
 add_executable(motion_streaming_interface
-  src/generic_joint_streamer_node.cpp)
+  src/v2/generic_joint_streamer_node.cpp)
 target_link_libraries(motion_streaming_interface 
-  industrial_robot_client 
-  simple_message
-  ${catkin_LIBRARIES})
-
-add_executable(motion_download_interface
-  src/generic_joint_downloader_node.cpp)
-target_link_libraries(motion_download_interface 
   industrial_robot_client 
   simple_message
   ${catkin_LIBRARIES})
@@ -104,22 +104,15 @@ target_link_libraries(motion_download_interface
 # required)
 
 add_executable(robot_state_bswap
-  src/generic_robot_state_node.cpp)
+  src/v2/generic_robot_state_node.cpp)
 target_link_libraries(robot_state_bswap 
   industrial_robot_client_bswap 
   simple_message_bswap
   ${catkin_LIBRARIES})
 
 add_executable(motion_streaming_interface_bswap
-  src/generic_joint_streamer_node.cpp)
+  src/v2/generic_joint_streamer_node.cpp)
 target_link_libraries(motion_streaming_interface_bswap 
-  industrial_robot_client_bswap  
-  simple_message_bswap
-  ${catkin_LIBRARIES})
-
-add_executable(motion_download_interface_bswap
-  src/generic_joint_downloader_node.cpp)
-target_link_libraries(motion_download_interface_bswap 
   industrial_robot_client_bswap  
   simple_message_bswap
   ${catkin_LIBRARIES})
@@ -129,8 +122,8 @@ target_link_libraries(motion_download_interface_bswap
 # byte swapping, one without)
 
 add_executable(joint_trajectory_action 
-  src/generic_joint_trajectory_action_node.cpp
-  src/joint_trajectory_action.cpp)
+  src/v2/generic_joint_trajectory_action_node.cpp
+  src/v2/joint_trajectory_action.cpp)
 target_link_libraries(joint_trajectory_action 
   industrial_robot_client ${catkin_LIBRARIES})
 add_dependencies(joint_trajectory_action industrial_robot_client_gencpp)
@@ -161,9 +154,7 @@ install(TARGETS
         robot_state 
         robot_state_bswap 
         motion_streaming_interface 
-        motion_download_interface 
         motion_streaming_interface_bswap 
-        motion_download_interface_bswap 
         joint_trajectory_action 
     RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
